# LinuxLikeTerminal

./: .gitignore  CMakeLists.txt  README.md
inlcude/: builtins.h  shell.h
src/: builtins.cpp  builtins.h  main.cpp  shell.cpp  shell.h
